Adjust for deprecation in JDK 21, add annotations